# commodity_futures

./: Cargo.toml
data/: glbx-mdp3-20220531.trades.dbz
src/: main.rs
src/querygeneral/reit/: mod.rs
src/querygeneral/soyfutures/: mod.rs
