[package]
name = "databento"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.23.0", features = ["full"] }
suppaftp = { version = "^4.5.0", features = ["native-tls"]}
curl = "0.4.44"
dbz-lib = { git = "https://github.com/databento/dbz"}
databento-defs = { git = "https://github.com/databento/databento-defs", branch = "dev", features = ["serde"], version = "0.3.0" }
streaming-iterator = "0.1.8"
scylla = "0.4"
tokio-stream = "0.1.11"
futures = "0.3.25"
[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
